# CSC305

./: .clang_complete  .gitmodules  CMakeLists.txt
Examples/Ex1_Simple/: .#main.cpp
assign01/: CMakeLists.txt  draw.h  gr_lib.h  main.cpp  plane.h  ray.h  rays.h  readme.org  sphere.h  triangles.h  world.h
assign02/: .#main.cpp  .clang_complete  Makefile  build.bat  imgui.ini
assign02/Debug/: assign02.exp  assign02.ilk  assign02.lib  imgui.ini
assign02/include/: gl_error_printing.h  models.h  textures.h
assign02/src/: .#main.cpp  main.cpp
assign03/: READme.org  build.bat  imgui.ini
assign03/Debug/: assign02.exp  assign02.ilk  assign03.exp  assign03.ilk  assign03.lib
assign03/include/: .#bezier.h  animation_defs.h  animations.h  bezier.h  models_2D.h  scene.h
assign03/src/: main.cpp
assign04/: .clang_complete  READme.org  build.bat
assign04/Debug/: assign02.exp  assign02.ilk  assign04.exp  assign04.ilk  assign04.lib
assign04/include/: project_init.h  terrain_shading.h  triangle_strip_mesh.h
assign04/shaders/: skybox_vshader.glsl  terrain_fshader.glsl  terrain_vshader.glsl
assign04/src/: main.cpp
common/: GLFW.cmake
general/: models.h  textures.h
lab02/: main.cpp
lab03/: CMakeLists.txt  main.cpp
lab04/: main.cpp
